[bisected] piglit spec.arb_texture_view.bug-layers-image causes gpu hangs on IVB
This test causes a gpu hang on IVB systems in CI.
Bisected to the following commit which hits the added piglit test:
commit 2208d79d Author: Lionel Landwerlin lionel.g.landwerlin@intel.com Date: Tue Oct 1 11:55:46 2019 +0300
mesa: don't forget to clear _Layer field on texture unit
On the Android Antutu benchmark we ran into an assert in ISL where the
(base layer + num layers) > total layers. It turns out the core of
mesa forgot to clear the _Layer variable, potentially leaving an
inconsistent value.
v2: Pull setting u->_Layer out of the conditional blocks (Jason)
Signed-off-by: Lionel Landwerlin <lionel.g.landwerlin@intel.com>
Cc: <mesa-stable@lists.freedesktop.org>
Reviewed-by: Eric Engestrom <eric.engestrom@intel.com>
Reviewed-by: Jason Ekstrand <jason@jlekstrand.net>