src/intel/isl/isl_surface_state.c
@@ -789,7 +789,12 @@ isl_genX(null_fill_state)(void *state, struct isl_extent3d size)
 {
    struct GENX(RENDER_SURFACE_STATE) s = {
       .SurfaceType = SURFTYPE_NULL,
-      .SurfaceFormat = ISL_FORMAT_B8G8R8A8_UNORM,
+      /* We previously had this format set to B8G8R8A8_UNORM but ran into
+       * hangs on IVB. R32_UINT seems to work for everybody.
+       *
+       * https://gitlab.freedesktop.org/mesa/mesa/issues/1872
+       */
+      .SurfaceFormat = ISL_FORMAT_R32_UINT,
 #if GEN_GEN >= 7
       .SurfaceArray = size.depth > 0,
 #endif
